20110819
	appl/cmd/mk/mk.b - use raise "fail:..." for exit status [issue 268]
20110629
	change x86 getcallerpc to avoid use of %ebp [issue 266]
	change type of getcallerpc to uintptr from ulong
20110619
	emu/port/devfs-posix.c: put major/minor st_dev into path without mapping (with luck)
	emu/port/kproc-pthreads.c: ensure pthread stack is at least PTHREAD_STACK_MIN (plus slop)
20110526
	change osyield in Windows to use SwitchToThread instead of sleep(0) [e-mail list]
20110525
	utils/[5678kqv]c/mkfile - include -I. before $CFLAGS to ensure right gc.h [issue 264]
20110516
	merge changes from vac branch of mechiel-inferno-os (googlecode)
20110426
	emu/Linux/asm-arm.S linux system call interface changed [issue 215, mechiel]
20110419
	libinterp/tk.c:/^Tk_rect shouldn't return non-canonical rectangles
	/appl/wm/mand.b handle reshape to empty rectangles
20110408
	appl/lib/json.b - have writeval produce same (correct) form as .text for Real [issue 230]
20110407
	fix embarrassingly broken Lists->delete; add Lists->find [issue 257]
	add some extra explanation to sys-dup(2) about fildes
20110404
	update Nt/386/bin
	/limbo/com.c - count constants in qualifiers, not qualifiers [issue 212, mechiel]
	/appl/cmd/limbo/com.b [also issue 212]
20110403
	secstore(2) and secstore(1) updated to implement writing [issue 256, mechiel]
20110402
	revision to devsrv.c change [issue 244] to avoid two calls to delwaiting
20110330
	call strtol not atoi for hex numbers [issue 255, mechiel]
20110329
	utils/mkdir/mkdir.c - add -p option [mechiel, issue 250]
	emu/Linux/mkfile - try searching -lpthread after -lrt for sem_* [issue 247]
	emu/port/devfs-posix.c - treat unix domain sockets as files (open/read/write/close) [npe, rsc, issue 254]
	emu/port/devfs-posix.c - use volatile correctly; slight code tidy
	emu/lib9/errstr-posix.c replace EINTR's error string by Eintr's text
20110315
	libtk/textw.c - fix mysterious control characters for editing (D and K) [issue 253, fix from mechiel]
20110225